@@ -4,6 +4,22 @@
   <artifactId>FourierDrawings</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <release>14</release>
+            <source>14</source>
+            <target>14</target>
+            <compilerArgs>--enable-preview</compilerArgs>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
 <dependencies>
 
   	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
